-- =============================================================
--  Rumbokningsapp — Databasschema
--  Databas:     PostgreSQL
--  Konvention:  snake_case, TIMESTAMPTZ för tidsstämplar,
--               ENUM-typer för statusvärden med begränsad domän
--  Triggers:    set_timestamps() hanterar created_at / updated_at
--  Index:       Längst ner, enbart det nödvändigaste
-- =============================================================


-- -------------------------------------------------------------
--  ENUM-TYPER
--  Postgres-native enums avvisar ogiltiga värden automatiskt.
--  Namnges med domän som prefix för att undvika kollisioner.
-- -------------------------------------------------------------

DO $$
BEGIN
CREATE
TYPE booking_status AS ENUM ('active', 'cancelled', 'expired', 'pending');
EXCEPTION WHEN duplicate_object THEN NULL;
END $$;

DO $$
BEGIN
CREATE
TYPE registration_status AS ENUM ('invited', 'registered', 'declined');
EXCEPTION WHEN duplicate_object THEN NULL;
END $$;

-- Migration: add 'declined' to existing registration_status enum
-- (ADD VALUE IF NOT EXISTS is safe and idempotent since PG 9.3)
ALTER TYPE registration_status ADD VALUE IF NOT EXISTS 'declined';


-- =============================================================
--  MIGRATIONSHISTORIK
-- =============================================================

-- Spårar vilka migrationsskript som körts och när.
-- version är manuellt satt (inte IDENTITY) för att migreringsverktyget
-- ska kunna styra numreringen explicit.
CREATE TABLE IF NOT EXISTS database_versions
(
    version    INTEGER PRIMARY KEY,
    name       TEXT        NOT NULL UNIQUE,
    applied_at TIMESTAMPTZ NOT NULL DEFAULT NOW()
);


-- =============================================================
--  FACILITIES
-- =============================================================

-- Campus är den fysiska platsen (byggnad/adress).
-- contact är fritext — kan vara namn, telefon eller e-post.
CREATE TABLE IF NOT EXISTS campus
(
    id      BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    street  TEXT NOT NULL,
    zip     TEXT,
    city    TEXT NOT NULL,
    country TEXT NOT NULL,
    contact TEXT -- Fritext: namn, telefon eller e-post
);


-- Rumstyper som en separat tabell (i stället för Postgres ENUM)
-- vilket gör det enkelt att lägga till nya typer utan migration.
CREATE TABLE IF NOT EXISTS room_types
(
    id   BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    name TEXT NOT NULL UNIQUE
);


-- Rum tillhör ett campus och en rumstyp.
-- ON DELETE RESTRICT förhindrar att ett campus eller rumstyp
-- raderas om det finns rum kopplade till det.
CREATE TABLE IF NOT EXISTS rooms
(
    id           BIGINT  NOT NULL PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    campus_id    BIGINT  NOT NULL REFERENCES campus (id) ON DELETE RESTRICT,
    name         TEXT    NOT NULL,
    capacity     INTEGER, -- NULL = okänd/ej relevant
    room_type_id BIGINT  NOT NULL REFERENCES room_types (id) ON DELETE RESTRICT,
    floor        TEXT,
    notes        TEXT
);


-- Typer av assets (projektor, whiteboard, TV, etc.)
CREATE TABLE IF NOT EXISTS asset_types
(
    id          BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    description TEXT NOT NULL UNIQUE
);


-- Kopplingstabell rum ↔ asset-typ.
-- En rad = en fysisk enhet i ett rum. Kvantitet hanteras genom
-- antal rader, vilket gör det enkelt att ta bort enskilda enheter.
CREATE TABLE IF NOT EXISTS room_assets
(
    id            BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    room_id       BIGINT NOT NULL REFERENCES rooms (id) ON DELETE CASCADE,
    asset_type_id BIGINT NOT NULL REFERENCES asset_types (id) ON DELETE RESTRICT,
    notes         TEXT
);


-- =============================================================
--  PERMISSION SYSTEM
-- =============================================================

-- Alla möjliga behörighetsnycklar i systemet.
-- Fungerar som "master list" — övriga permission-tabeller
-- refererar till dessa nycklar via FK.
CREATE TABLE IF NOT EXISTS system_permissions
(
    key         TEXT PRIMARY KEY,
    description TEXT NOT NULL
);


-- Mallar för behörighetsuppsättningar (roller).
-- En mall tilldelas en användare och definierar grundbehörigheterna.
CREATE TABLE IF NOT EXISTS permission_templates
(
    id                       BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    name                     TEXT   NOT NULL UNIQUE,
    label                    TEXT   NOT NULL,
    css_class                TEXT,
    default_permission_level INTEGER NOT NULL DEFAULT 1 CHECK (default_permission_level >= 1 AND default_permission_level <= 10)
);



-- Behörighetsvärden kopplade till en mall.
-- value: TRUE = tillåten, FALSE = nekad.
CREATE TABLE IF NOT EXISTS permission_template_flags
(
    template_id    BIGINT NOT NULL REFERENCES permission_templates (id) ON DELETE CASCADE,
    permission_key TEXT    NOT NULL REFERENCES system_permissions (key) ON DELETE CASCADE,
    value          BOOLEAN NOT NULL,
    PRIMARY KEY (template_id, permission_key)
);


-- =============================================================
--  USERS & PROFIL
-- =============================================================

-- Klasser/grupper som användare tillhör.
CREATE TABLE IF NOT EXISTS class
(
    id         BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    class_name TEXT NOT NULL
);


-- Huvudtabell för användare.
-- permission_template_id: en användare har exakt ett template.
-- tokens_valid_after: används för JWT-invalidering — tokens utfärdade
-- innan detta värde ska avvisas av applikationen.
-- ON DELETE SET NULL på template: en användare utan template
-- behandlas som en användare utan behörigheter.
CREATE TABLE IF NOT EXISTS users
(
    id                        BIGINT      PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    email                     TEXT        NOT NULL,
    password_hash             TEXT        NOT NULL,
    display_name              TEXT,
    is_banned                 BOOLEAN     NOT NULL DEFAULT FALSE,
    is_active                 BOOLEAN     NOT NULL DEFAULT TRUE,
    permission_level_override INTEGER     CHECK (permission_level_override >= 1 AND permission_level_override <= 10),
    reset_token_hash          TEXT,
    reset_token_expires       TIMESTAMPTZ,
    tokens_valid_after        TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    permission_template_id    BIGINT      REFERENCES permission_templates (id) ON DELETE SET NULL
);



-- Personliga behörighetsavvikelser per användare.
-- NULL  = ingen avvikelse, ärv från templatens värde.
-- TRUE  = personlig override: tillåten oavsett template.
-- FALSE = personlig override: nekad oavsett template.
-- Applikationslogik: COALESCE(override.value, template_flag.value, FALSE)
CREATE TABLE IF NOT EXISTS user_permission_overrides
(
    user_id        BIGINT NOT NULL REFERENCES users (id) ON DELETE CASCADE,
    permission_key TEXT    NOT NULL REFERENCES system_permissions (key) ON DELETE CASCADE,
    value          BOOLEAN, -- NULL = ärv från template
    PRIMARY KEY (user_id, permission_key)
);


-- Kopplingstabell användare ↔ campus
CREATE TABLE IF NOT EXISTS user_campus
(
    id        BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    user_id   BIGINT NOT NULL REFERENCES users (id) ON DELETE CASCADE,
    campus_id BIGINT NOT NULL REFERENCES campus (id) ON DELETE CASCADE,
    UNIQUE (user_id, campus_id)
);


-- Kopplingstabell användare ↔ klass
CREATE TABLE IF NOT EXISTS user_class
(
    id       BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    user_id  BIGINT NOT NULL REFERENCES users (id) ON DELETE CASCADE,
    class_id BIGINT NOT NULL REFERENCES class (id) ON DELETE CASCADE,
    UNIQUE (user_id, class_id)
);


-- Kopplingstabell klass ↔ campus (many-to-many)
CREATE TABLE IF NOT EXISTS class_campus
(
    id        BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    class_id  BIGINT NOT NULL REFERENCES class (id) ON DELETE CASCADE,
    campus_id BIGINT NOT NULL REFERENCES campus (id) ON DELETE CASCADE,
    UNIQUE (class_id, campus_id)
);


CREATE TABLE IF NOT EXISTS user_booking_slugs
(
    id         BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    user_id    BIGINT NOT NULL REFERENCES users (id) ON DELETE CASCADE,
    slug       TEXT   NOT NULL UNIQUE,
    is_active  BOOLEAN     NOT NULL DEFAULT TRUE,
    created_at TIMESTAMPTZ NOT NULL DEFAULT NOW()
);

-- Index for fast slug lookups
CREATE UNIQUE INDEX IF NOT EXISTS idx_booking_slugs_slug ON user_booking_slugs(slug);

-- =============================================================
--  BOOKINGS
-- =============================================================

-- En bokning kopplar en användare till ett rum under en tidsperiod.
-- status är en Postgres ENUM — ogiltiga värden avvisas av databasen.
-- ON DELETE RESTRICT på user_id och room_id: en bokning ska inte
-- försvinna om en användare eller ett rum råkar raderas av misstag.
-- created_at sätts av trigger; updated_at uppdateras av trigger vid UPDATE.
CREATE TABLE IF NOT EXISTS bookings
(
    id         BIGINT         PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    user_id    BIGINT         NOT NULL REFERENCES users (id) ON DELETE RESTRICT,
    room_id    BIGINT         NOT NULL REFERENCES rooms (id) ON DELETE RESTRICT,
    start_time TIMESTAMPTZ    NOT NULL,
    end_time   TIMESTAMPTZ    NOT NULL,
    status     booking_status NOT NULL DEFAULT 'active',
    is_lesson  BOOLEAN        NOT NULL DEFAULT FALSE,
    notes      TEXT,
    booker_name TEXT,
    recurring_group_id UUID,
    created_at TIMESTAMPTZ    NOT NULL DEFAULT NOW(),
    updated_at TIMESTAMPTZ,

    -- Säkerställer att sluttid alltid är efter starttid
    CONSTRAINT chk_booking_times CHECK (end_time > start_time)
);


-- Kopplingstabell bokning ↔ klass.
-- Spårar vilka klasser en bokning riktar sig till.
CREATE TABLE IF NOT EXISTS booking_class
(
    booking_id BIGINT NOT NULL REFERENCES bookings (id) ON DELETE CASCADE,
    class_id   BIGINT NOT NULL REFERENCES class (id) ON DELETE CASCADE,
    PRIMARY KEY (booking_id, class_id)
);

-- Kopplingstabell användare ↔ bokning.
-- Används både för inbjudningar och bekräftade registreringar.
-- status: 'invited' = väntar på svar, 'registered' = bekräftad närvaro.
CREATE TABLE IF NOT EXISTS registrations
(
    user_id    BIGINT              NOT NULL REFERENCES users (id) ON DELETE CASCADE,
    booking_id BIGINT              NOT NULL REFERENCES bookings (id) ON DELETE CASCADE,
    status     registration_status NOT NULL DEFAULT 'invited',
    created_at TIMESTAMPTZ         NOT NULL DEFAULT NOW(),
    PRIMARY KEY (user_id, booking_id)
);

-- Migration: add status + created_at to existing registrations table
DO $$
BEGIN
    IF NOT EXISTS (
        SELECT 1 FROM information_schema.columns
        WHERE table_name = 'registrations' AND column_name = 'status'
    ) THEN
        ALTER TABLE registrations ADD COLUMN status registration_status NOT NULL DEFAULT 'invited';
    END IF;

    IF NOT EXISTS (
        SELECT 1 FROM information_schema.columns
        WHERE table_name = 'registrations' AND column_name = 'created_at'
    ) THEN
        ALTER TABLE registrations ADD COLUMN created_at TIMESTAMPTZ NOT NULL DEFAULT NOW();
    END IF;
END $$;


-- =============================================================
--  VYER
-- =============================================================

-- Effektiva behörigheter per användare.
-- Kombinerar template-flaggor med personliga overrides.
-- COALESCE: personlig override vinner om den finns (även FALSE),
-- annars används templatens värde, annars FALSE (nekad).
DROP VIEW IF EXISTS v_user_effective_permissions;
CREATE VIEW v_user_effective_permissions AS
SELECT u.id                                  AS user_id,
       sp.key                                AS permission_key,
       COALESCE(upo.value, ptf.value, FALSE) AS is_granted
FROM users u
         CROSS JOIN system_permissions sp
         LEFT JOIN permission_templates pt
                   ON u.permission_template_id = pt.id
         LEFT JOIN permission_template_flags ptf
                   ON pt.id = ptf.template_id AND ptf.permission_key = sp.key
         LEFT JOIN user_permission_overrides upo
                   ON u.id = upo.user_id AND upo.permission_key = sp.key;


DROP VIEW IF EXISTS v_users_with_level CASCADE;
CREATE VIEW v_users_with_level AS
SELECT u.id,
       u.email,
       u.password_hash,
       u.display_name,
       u.is_banned,
       u.is_active,
       COALESCE(u.permission_level_override, pt.default_permission_level, 1) AS permission_level,
       u.permission_level_override,
       u.reset_token_hash,
       u.reset_token_expires,
       u.tokens_valid_after,
       u.permission_template_id
FROM users u
LEFT JOIN permission_templates pt ON u.permission_template_id = pt.id;

-- Berikad bokningsvy med användar- och rumsdata samt antal registrerade.
-- status beräknas dynamiskt: om end_time har passerat sätts 'expired'
-- automatiskt, utan att man behöver uppdatera raden i bookings.
DROP VIEW IF EXISTS v_bookings_detailed CASCADE;
CREATE
OR REPLACE
VIEW v_bookings_detailed AS
SELECT b.id               AS booking_id,
       b.user_id,
       u.display_name     AS user_name,
       u.email            AS user_email,
       b.room_id,
       r.name             AS room_name,
       r.capacity         AS room_capacity,
       rt.name            AS room_type,
       r.floor            AS room_floor,
       b.start_time,
       b.end_time,
       CASE
           WHEN b.status = 'cancelled' THEN 'cancelled'
           WHEN b.status = 'pending' THEN 'pending'
           WHEN b.end_time < NOW() THEN 'expired'
           ELSE 'active'
           END::booking_status                         AS status,
       b.is_lesson,
       b.notes,
       b.booker_name,
       b.recurring_group_id,
       b.created_at,
       b.updated_at,
       COUNT(reg.user_id) FILTER (WHERE reg.status = 'registered') AS registration_count,
       COUNT(reg.user_id) FILTER (WHERE reg.status = 'invited')    AS invitation_count,
       c.city             AS campus_city,
       (SELECT json_agg(at.description)::text
        FROM room_assets ra
        JOIN asset_types at ON ra.asset_type_id = at.id
        WHERE ra.room_id = b.room_id) AS room_assets,
       (SELECT json_agg(cl.class_name)::text
        FROM booking_class bc
        JOIN class cl ON bc.class_id = cl.id
        WHERE bc.booking_id = b.id) AS class_names
FROM bookings b
         LEFT JOIN users u ON b.user_id = u.id
         LEFT JOIN rooms r ON b.room_id = r.id
         LEFT JOIN room_types rt ON r.room_type_id = rt.id
         LEFT JOIN campus c ON r.campus_id = c.id
         LEFT JOIN registrations reg ON b.id = reg.booking_id
GROUP BY b.id, b.user_id, u.display_name, u.email,
         b.room_id, r.name, r.capacity, rt.name, r.floor,
         b.start_time, b.end_time, b.status, b.is_lesson, b.notes,
         b.booker_name, b.recurring_group_id,
         b.created_at, b.updated_at, c.city;


-- Rumsdetaljer med assets som JSON-array-sträng.
-- json_agg ger en text som matchar C#-modellens AssetsString.
DROP VIEW IF EXISTS v_room_details;
CREATE VIEW v_room_details AS
SELECT r.id    AS RoomId,
       r.campus_id  AS CampusId,
       c.city  AS CampusCity,
       r.name  AS Name,
       r.capacity AS Capacity,
       r.room_type_id AS RoomTypeId,
       rt.name AS RoomTypeName,
       r.floor AS Floor,
       r.notes AS Notes,
       (json_agg(at.description) FILTER (WHERE at.description IS NOT NULL))::text
               AS AssetsString
FROM rooms r
         LEFT JOIN campus c ON r.campus_id = c.id
         LEFT JOIN room_types rt ON r.room_type_id = rt.id
         LEFT JOIN room_assets ra ON r.id = ra.room_id
         LEFT JOIN asset_types at ON ra.asset_type_id = at.id
GROUP BY r.id, r.campus_id, c.city, r.name, r.capacity,
         r.room_type_id, rt.name, r.floor, r.notes;


-- =============================================================
--  TRIGGER: Automatisk hantering av created_at / updated_at
-- =============================================================

-- Triggerfunktion som anropas av Postgres före INSERT och UPDATE.
-- NEW är den rad som håller på att skrivas till disk.
-- Funktionen modifierar NEW innan raden sparas.
-- RETURNS TRIGGER är obligatoriskt för triggerfunktioner.
CREATE
OR REPLACE
FUNCTION set_timestamps()
RETURNS TRIGGER AS $$
BEGIN IF TG_OP = 'INSERT' THEN
        -- Vid INSERT: tvinga created_at till NOW() oavsett vad som skickades in
        NEW.created_at = NOW();
ELSIF TG_OP = 'UPDATE' THEN
        -- Vid UPDATE: rör aldrig created_at, sätt updated_at till nu
        NEW.created_at = OLD.created_at;
NEW.updated_at = NOW();
END IF;

RETURN NEW;
END;
$$ LANGUAGE plpgsql;


-- Koppla triggern till bookings.
-- BEFORE: körs innan raden skrivs, så att vi kan ändra NEW.
-- FOR EACH ROW: körs en gång per påverkad rad (inte per query).
CREATE
OR REPLACE
TRIGGER trg_bookings_timestamps
BEFORE INSERT OR
UPDATE ON bookings
    FOR EACH ROW EXECUTE FUNCTION set_timestamps();


-- =============================================================
--  RESOURCE MANAGEMENT (Movable items like cars, etc.)
-- =============================================================

-- Kategorier av resurser (t.ex. Fordon, Portabel IT)
CREATE TABLE IF NOT EXISTS resource_categories
(
    id   BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    name TEXT NOT NULL UNIQUE
);

-- Faktiska bokningsbara resurser kopplade till en kategori och en ort (campus)
CREATE TABLE IF NOT EXISTS bookable_resources
(
    id                   BIGINT  NOT NULL PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    category_id          BIGINT  NOT NULL REFERENCES resource_categories (id) ON DELETE RESTRICT,
    campus_id            BIGINT  NOT NULL REFERENCES campus (id) ON DELETE RESTRICT,
    name                 TEXT    NOT NULL,
    description          TEXT,
    is_active            BOOLEAN NOT NULL DEFAULT TRUE
);

-- Bokningar av fria resurser
CREATE TABLE IF NOT EXISTS resource_bookings
(
    id          BIGINT      PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    resource_id BIGINT      NOT NULL REFERENCES bookable_resources (id) ON DELETE CASCADE,
    user_id     BIGINT      NOT NULL REFERENCES users (id) ON DELETE RESTRICT,
    start_time  TIMESTAMPTZ NOT NULL,
    end_time    TIMESTAMPTZ NOT NULL,
    notes       TEXT,
    created_at  TIMESTAMPTZ NOT NULL DEFAULT NOW()
);

-- Index för snabbare sökning på resursbokningar
CREATE INDEX IF NOT EXISTS idx_resource_bookings_time ON resource_bookings (start_time, end_time);
CREATE INDEX IF NOT EXISTS idx_resource_bookings_resource ON resource_bookings (resource_id);

-- =============================================================
--  INDEX
--  Enbart det nödvändigaste — för många index kostar skrivprestanda.
--  Primary keys och UNIQUE-constraints skapar automatiskt index.
-- =============================================================

-- Email används vid varje inloggning.
-- UNIQUE INDEX ger både integritetsgaranti och snabb uppslagning.
CREATE UNIQUE INDEX IF NOT EXISTS idx_users_email
    ON users (email);

-- Det viktigaste prestandaindexet i applikationen.
-- Frågan "är rum X ledigt mellan tid A och B?" körs vid varje bokningsförsök.
-- Sammansatt index på (room_id, start_time, end_time) låter Postgres
-- besvara frågan utan att läsa hela bookings-tabellen.
CREATE INDEX IF NOT EXISTS idx_bookings_room_time
    ON bookings (room_id, start_time, end_time);

-- "Visa mina bokningar" är en vanlig vy för inloggad användare.
CREATE INDEX IF NOT EXISTS idx_bookings_user_id
    ON bookings (user_id);

-- Snabb uppslagning av alla bokningar i en återkommande serie.
CREATE INDEX IF NOT EXISTS idx_bookings_recurring_group
    ON bookings (recurring_group_id) WHERE recurring_group_id IS NOT NULL;

-- Behörighetskontroll slår upp alla overrides för en specifik användare.
CREATE INDEX IF NOT EXISTS idx_user_perm_overrides_user_id
    ON user_permission_overrides (user_id);

-- Registreringar filtreras per användare och status i "mina bokningar"-vyer.
CREATE INDEX IF NOT EXISTS idx_registrations_user_status
    ON registrations (user_id, status);
